update to translation of "six bodies of x" and added divs to DA index

--- a/01_agama/samyukta/01/SA1_154.md
+++ b/01_agama/samyukta/01/SA1_154.md
@@ -139,7 +139,7 @@ next: SA1_155.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.10b29'>「云何識如實知？ 謂六識身，眼識⋯耳⋯鼻⋯舌⋯身⋯意識身。 是名為識。 如是識如實知。</td>
-    <td id='p32'>32. “How does he truly know awareness? This refers to the group of six kinds of awareness, which are the group of visual awareness … auditory … olfactory … gustatory … somatic … mental awareness. These are called awareness. He truly knows awareness in this way.</td>
+    <td id='p32'>32. “How does he truly know awareness? This refers to the group of six kinds of awareness, which are the visual kind of awareness … auditory … olfactory … gustatory … somatic … mental kind of awareness. These are called awareness. He truly knows awareness in this way.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.10c2'>「云何識集如實知？ 名色集是識集。 如是識集如實知。</td>
@@ -200,6 +200,6 @@ next: SA1_155.html
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 10 December 2024</p>
+<p class='revised'>Last Revised: 23 May 2025</p>
 
 <hr/>
