--- a/01_agama/samyukta/01/SA1_60.md
+++ b/01_agama/samyukta/01/SA1_60.md
@@ -27,7 +27,7 @@ next: SA1_138.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.16b18'>「如是愚癡、無聞凡夫計我、無明、分別如是觀，不離我所。 不離我所者，入於諸根。 入於諸根已，而生於觸。 六觸入所觸，愚癡、無聞凡夫生苦樂，從是生此等及餘。 謂六觸身。 云何為六？</td>
-    <td id='p4'>4. “In this way, a foolish and unlearned man’s imagined self, ignorance, and discernments being observed this way, he doesn’t discard what belongs to self. Someone who doesn’t discard what belongs to self enters the faculties. Once they enter the faculties, then they produce contact. Entering what is contacted by those six contacts, the foolish and unlearned man produces pain and pleasure, and everything else arises from this. This is called the body of six contacts. What are the six?</td>
+    <td id='p4'>4. “Thus, his imagined self, ignorance, and discernments being observed this way, a foolish and unlearned man doesn’t discard what belongs to self. Someone who doesn’t discard what belongs to self enters the faculties. Once they enter the faculties, then they produce contact. Entering what is contacted by those six contacts, a foolish and unlearned man produces pain and pleasure, and everything else arises from this. This is called the six kinds of contact. What are the six?</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.16b23'>「謂眼觸入處⋯耳⋯鼻⋯舌⋯身⋯意觸入處。 比丘，有意界、法界、無明界，無明觸所觸。 愚癡、無聞凡夫言有、言無、言有無、言非有非無、言我最勝、言我相似，我知、我見。</td>
@@ -48,12 +48,12 @@ next: SA1_138.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 63 in the <cite>Taisho</cite> edition and no. 60 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0016b13" target="_blank">T99.2.16b13-c3</a>). It’s a direct parallel of <a href="https://suttacentral.net/sn22.47" target="_blank">SN 22.47</a>.</p>
-<p>The main difference between the two versions is the list of ideas that the ordinary man thinks about. In SN 22.47, they seem to be forward-looking and parallel various realms of rebirth, while here his ideas revolve around ontology and the nature of self. Another difference is that, while it has the concept of ignorant contact, SN 22.47 does not include insightful contact that arises when ignorant contact ceases. [<a href="#ref1">back</a>]</p> </li>
+<li id="n1"><p>This is <em>sūtra</em> no. 63 in the <cite>Taisho</cite> edition and no. 60 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0016b13" target="_blank">T99.2.16b13-c3</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0002a12" target="_blank">Y30.2a12-3a3</a>). It’s a direct parallel of <a href="https://suttacentral.net/sn22.47" target="_blank">SN 22.47</a>.</p>
+<p>The main difference between the two versions is the list of ideas that the ordinary man thinks about. In SN 22.47, they seem to be forward-looking and parallel various realms of rebirth, while here his ideas revolve around ontology and the nature of self. Another difference is that, while it has the concept of ignorant contact, SN 22.47 does not include insightful contact that arises when ignorant contact ceases. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 11 April 2025</p>
+<p class='revised'>Last Revised: 23 May 2025</p>
 
 <hr/>
