--- a/01_agama/samyukta/02/SA2_221.md
+++ b/01_agama/samyukta/02/SA2_221.md
@@ -119,11 +119,11 @@ next: ../03/index.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.74b13'>答言： 「不也，尊者難陀。 所以者何？ 我已曾於此六識身如實觀察無我。 我亦常作是意解，六識身如實無我。」</td>
-    <td id='p22'>22. They answered, “No, Venerable Nanda. Why is that? We have truly observed that there is no self in these six groups of awareness. We also always come to understand in this way that the six groups of awareness are truly not self.”</td>
+    <td id='p22'>22. They answered, “No, Venerable Nanda. Why is that? We have truly observed that there is no self in these six kinds of awareness. We also always come to understand in this way that the six kinds of awareness are truly not self.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.74b16'>尊者難陀告諸比丘尼： 「善哉！善哉，姊妹！汝於此義應如是觀察： 『六識身如實無我。』 緣眼、色，生眼識，三事和合生觸，彼觸是我、異我、相在不？」</td>
-    <td id='p23'>23. Venerable Nanda told the nuns, “Good, sisters! Good! You should observe this subject in this way, ‘There truly is no self [observed] in the six groups of awareness.’ When visual awareness arises as a result of the eye and forms and all three come together to produce a contact, is that contact self, other than self, or are either present in the other?”</td>
+    <td id='p23'>23. Venerable Nanda told the nuns, “Good, sisters! Good! You should observe this subject in this way, ‘There truly is no self [observed] in the six kinds of awareness.’ When visual awareness arises as a result of the eye and forms and all three come together to produce a contact, is that contact self, other than self, or are either present in the other?”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.74b19'>答言：「不也，尊者難陀。」</td>
@@ -139,7 +139,7 @@ next: ../03/index.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.74b23'>尊者難陀告諸比丘尼：「善哉！善哉！當如實觀察：『於六觸身如實無我。』緣眼、色，生眼識，三事和合觸，觸緣受，彼觸緣受是我、異我、相在不？」</td>
-    <td id='p26'>26. Venerable Nanda told the nuns, “Good, good! You should observe this subject in this way, ‘There truly is no self [observed] in the six groups of contact.’ When visual awareness arises as a result of the eye and forms and all three come together to produce a contact, a feeling is conditioned by that contact. Is the feeling conditioned by that contact self, other than self, or are either present in the other?”</td>
+    <td id='p26'>26. Venerable Nanda told the nuns, “Good, good! You should observe this subject in this way, ‘There truly is no self [observed] in the six kinds of contact.’ When visual awareness arises as a result of the eye and forms and all three come together to produce a contact, a feeling is conditioned by that contact. Is the feeling conditioned by that contact self, other than self, or are either present in the other?”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.74b26'>答言：「不也，尊者難陀。」</td>
@@ -151,11 +151,11 @@ next: ../03/index.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.74b28'>答言：「不也，尊者難陀。所以者何？我等曾於此六受身如實觀察無我，我亦常作此意解，『六受身如實無我』。」</td>
-    <td id='p28'>28. They answered, “No, Venerable Nanda. Why is that? We’ve already truly observed that there is no self in these six groups of feeling. We also always come to understand in this way that these six groups of feeling are truly not self.”</td>
+    <td id='p28'>28. They answered, “No, Venerable Nanda. Why is that? We’ve already truly observed that there is no self in these six kinds of feeling. We also always come to understand in this way that these six kinds of feeling are truly not self.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.74c2'>尊者難陀告諸比丘尼：「善哉！善哉！汝於此義應如是觀察：『此六受身如實無我。』緣眼、色，生眼識，三事和合生觸，觸緣想，彼想是我、異我、相在不？」</td>
-    <td id='p29'>29. Venerable Nanda said to the nuns, “Good, good! You should observe this subject in this way: ‘There truly is no self [observed] in these six groups of feeling.’ When visual awareness arises as a result of the eye and forms and all three come together to produce a contact, that contact conditions a conception. Is that conception self, other than self, or are either present in the other?”</td>
+    <td id='p29'>29. Venerable Nanda said to the nuns, “Good, good! You should observe this subject in this way: ‘There truly is no self [observed] in these six kinds of feeling.’ When visual awareness arises as a result of the eye and forms and all three come together to produce a contact, that contact conditions a conception. Is that conception self, other than self, or are either present in the other?”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.74c5'>答言：「不也，尊者難陀。」</td>
@@ -167,11 +167,11 @@ next: ../03/index.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.74c8'>答言：「不也，尊者難陀。所以者何？我曾於此六想身如實觀察無我，我亦常作此意解，六想身如實無我。」</td>
-    <td id='p31'>31. They answered, “No, Venerable Nanda. Why is that? We have already truly observed that there is no self in these six groups of conception. We also always come to understand in this way that the six groups of conception truly are not self.”</td>
+    <td id='p31'>31. They answered, “No, Venerable Nanda. Why is that? We have already truly observed that there is no self in these six kinds of conception. We also always come to understand in this way that the six kinds of conception truly are not self.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.74c10'>尊者難陀告諸比丘尼：「善哉！善哉，比丘尼！汝於此義應如是觀察：『此六想身如實無我。』緣眼、色，生眼識，三事和合觸，觸緣思，彼思是我、異我、相在不？」</td>
-    <td id='p32'>32. Venerable Nanda said to the nuns, “Good, good! You should observe this subject in this way: ‘There truly is no self [observed] in these six groups of conception.’ When visual awareness arises as a result of the eye and forms and all three come together to produce a contact, that contact conditions an intention. Is that intention self, other than self, or are either present in the other?”</td>
+    <td id='p32'>32. Venerable Nanda said to the nuns, “Good, good! You should observe this subject in this way: ‘There truly is no self [observed] in these six kinds of conception.’ When visual awareness arises as a result of the eye and forms and all three come together to produce a contact, that contact conditions an intention. Is that intention self, other than self, or are either present in the other?”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.74c13'>答言：「不也，尊者難陀。」</td>
@@ -183,11 +183,11 @@ next: ../03/index.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.74c16'>答言：「不也，尊者難陀。所以者何？我曾於此六思身如實觀察無我，我常作此意解：『此六思身如實無我。』」</td>
-    <td id='p34'>34. They answered, “No, Venerable Nanda. Why is that? We have already truly observed that there is no self in these six groups of intention. We also always come to understand in this way that these six groups of intention truly are not self.”</td>
+    <td id='p34'>34. They answered, “No, Venerable Nanda. Why is that? We have already truly observed that there is no self in these six kinds of intention. We also always come to understand in this way that these six kinds of intention truly are not self.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.74c18'>尊者難陀告諸比丘尼：「善哉！善哉，比丘尼！汝於此義應如是觀察：『此六思身如實無我。』緣眼、色，生眼識，三事和合觸，觸緣愛，彼愛是我、異我、相在不？」</td>
-    <td id='p35'>35. Venerable Nanda said to the nuns, “Good, good! You should observe this subject in this way: ‘There truly is no self [observed] in these six groups of intention.’ When visual awareness arises as a result of the eye and forms and all three come together to produce a contact, that contact conditions a craving. Is that craving self, other than self, or are either present in the other?”</td>
+    <td id='p35'>35. Venerable Nanda said to the nuns, “Good, good! You should observe this subject in this way: ‘There truly is no self [observed] in these six kinds of intention.’ When visual awareness arises as a result of the eye and forms and all three come together to produce a contact, that contact conditions a craving. Is that craving self, other than self, or are either present in the other?”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.74c22'>答言：「不也，尊者難陀。」</td>
@@ -199,11 +199,11 @@ next: ../03/index.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.74c24'>答言：「不也，尊者難陀。所以者何？我曾於此六愛身如實觀察無我，我常作此意解：『此六愛身如實無我。』」</td>
-    <td id='p37'>37. They answered, “No, Venerable Nanda. Why is that? We have already truly observed that there is no self in these six groups of craving. We also always come to understand in this way that these six groups of craving truly are not self.”</td>
+    <td id='p37'>37. They answered, “No, Venerable Nanda. Why is that? We have already truly observed that there is no self in these six kinds of craving. We also always come to understand in this way that these six kinds of craving truly are not self.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.74c26'>尊者難陀告諸比丘尼：「汝於此義應如是觀察：『此六愛身如實無我。』姊妹，譬因膏油、因炷，燈明得然；彼油無常，炷亦無常，火亦無常，器亦無常。若有作是言：『無油、無炷、無火、無器，而所依起燈光，常、恒、住、不變易。』作是說者，為等說不？」</td>
-    <td id='p38'>38. Venerable Nanda said to the nuns, “Good, good! You should observe this subject in this way: ‘There truly is no self [observed] in these six groups of craving.’ Sisters, it’s just as oil and a wick are the reasons that a lamp can be lit. That oil is impermanent. The wick, flame, and container are impermanent, too. Suppose someone says, ‘Without the oil, wick, flame, or container, there is a basis that produces the lamp’s light, which is permanent, eternal, lasting, and unchanging’? Would that speaker be speaking correctly?”<sup id="ref7"><a href="#n7">7</a></sup></td>
+    <td id='p38'>38. Venerable Nanda said to the nuns, “Good, good! You should observe this subject in this way: ‘There truly is no self [observed] in these six kinds of craving.’ Sisters, it’s just as oil and a wick are the reasons that a lamp can be lit. That oil is impermanent. The wick, flame, and container are impermanent, too. Suppose someone says, ‘Without the oil, wick, flame, or container, there is a basis that produces the lamp’s light, which is permanent, eternal, lasting, and unchanging’? Would that speaker be speaking correctly?”<sup id="ref7"><a href="#n7">7</a></sup></td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.75a3'>答言：「不也，尊者難陀。所以者何？緣油、炷、器然燈，彼油、炷、器悉無常；若無油、無炷、無器，所依燈光亦復隨滅、息、沒、清涼、真實。」</td>
@@ -294,33 +294,33 @@ next: ../03/index.html
 <p>On the other hand, MN 146 only treats the inner and outer sense fields and six groups of awareness before moving on to the parables of the oil lamp, tree shadow, and butcher. The overall outline of MN 146 is more concise than SĀ 2.221, but it has been made more verbose and Nanda’s second teaching is not abbreviated away. The result is that it is a longer <em>sutta</em> than SĀ 2.221 in terms of total word count, but SĀ 2.221 has been expanded to cover additional topics more concisely.</p>
 <p>Despite these differences, the content of these three versions are remarkably equiv., and we can clearly see that there was an original that hasn’t been changed drastically by any one of them. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p>This list of names is reminescent of the disciple lists that became common in the introductions of later Buddhist scriptures, especially among Mahāyānists. It is not found in MN 146, but T1442 has a slightly larger list of nuns. Notes on each name can be found below:</p>
-<p><em>Cundā</em>. C. <span class="ch">純陀</span> (EMC. tʃɪuĕn-da). This is a well-known translit. of P/S. <em>cunda</em>. Presumably, it was in a feminine form: Cundā. The parallel in T1442 is an alt. form of the same translit. (<span class="ch">准陀</span>, EMC. tʃɪuĕn-da).</p>
-<p><em>Meṇḍikā</em>. C. <span class="ch">民陀</span> (EMC. miĕn-da). Meṇḍaka was the name of a prominent lay disciple of the Buddha. My tentative guess is that this was a feminine form of the same in Prakrit. Again, T1442 has the same translit.</p>
-<p><em>Mārabhā</em>. C. <span class="ch">摩羅婆</span> (EMC. mua-la-bua). The <span class="ch">翻梵語</span> has an entry for <span class="ch">摩羅娑</span> immediately after the entry for <span class="ch">波羅遮羅</span> (the next name in this list), suggesting that <span class="ch">娑</span> was a typo for <span class="ch">婆</span>, which was fairly common for these two characters. The interpretation there reinforces this conclusion: <span class="ch">譯曰莫懶</span> (T2130.54.1002a16), which presumably describes <em>mā</em> (“no”) + <em>rabha</em> (“negligence”). The corresponding translit. in T1442 (<span class="ch">末臘婆</span>) also adds support for taking <span class="ch">娑</span> in <span class="ch">翻梵語</span> as a typo. Thus, I arrive at Mārabhā as this nun’s name.</p>
-<p><em>Pālācārā</em>. C. <span class="ch">波羅遮羅</span> (EMC. pua-la-tʃɪă-la). The <span class="ch">翻梵語</span> says for this translit.: <span class="ch">譯曰波羅者守遮羅者行</span> (T2130.54.1002a15), which suggests <em>pāla</em> (<span class="ch">守</span>, “guard”) + <em>ācāra</em> (<span class="ch">行</span>, “conduct”). There was a nun in P. sources named Paṭācārā. The alternation between -ṭ- and -ḷ- in Indic dialects was not so uncommon, so I suspect this is the same nun. As an added bit of evidence, T1442 has a nun named “great robe” (<span class="ch">大衣</span>), which was an ironic name for the mendicant’s patchwork robes. A synonym for this could well be S. <em>paṭaccara</em> (“worn-out garment”), which is very similar in pronunciation to P. Paṭācārā. It would seem that this nun’s name has suffered some confusion as it traveled between Indic dialects. I have retained the Pr. version found in this text given the uncertainties.</p>
-<p><em>Āḷavikā</em>. C. <span class="ch">阿羅毘迦</span> (EMC. •a-la-bii-kă). This was also the translit. of the monk Āḷavakā’s name found in the <cite>Sudarśana Vinaya Vibhāṣā</cite> (<span class="ch">善見律毘婆沙</span>, cf. T1462.24.764b16). His name was sometimes written Āḷavikā in P. sources. Buddhaghoṣa and the <span class="ch">善見律毘婆沙</span> both agree that he was named for the village where he was born. Buddhaghoṣa also says that all children born there were so named. The <span class="ch">翻梵語</span> has entries for this translit. at T2130.54.998b16 and 1002a17. It says: <span class="ch">阿羅毘迦 譯曰小語</span>. This suggests a word like S. <em>ālāpika</em>, which is also plausible. I’ve opted for the reading Āḷavikā here, especially since T1442 appears to include a translation of S. Aṭavī (<span class="ch">曠野</span>, “wilderness”), which is equiv. to Pr. Āḷavi, the name of the village.</p>
-<p><em>Kṣemā</em>. C. <span class="ch">差摩</span> (EMC. ṭṣ‘ïĕ-mua). This was a well-known translit. of S. <em>kṣema</em> (P. <em>khema</em>), and Khemā was the name of a prominent nun in P. sources. T1442 lists a nun named “Security” (<span class="ch">安隱</span>) which matches the meaning of S. <em>kṣema</em>.</p>
-<p><em>Namati</em>. C. <span class="ch">難摩</span> (EMC. nan-mua). This would translit. P/S. <em>nama-</em> or <em>nāma-</em>, and presumably a final syllable has been dropped. In G., there would have been no differentiation between these two possibilities because the language lacked long vowels. The final syllable, though, could have been <em>-da</em> or <em>-di</em>, which would transl. to S. <em>-ta</em> or <em>-ti</em>. My guess that the name was Namati is based on it being the name of a divinity. S. <em>namati</em> is a verb that means “bow” or “bend,” and S. <em>namada</em> is an adj. with meanings such as “crooked, master, felt, cloud.” It’s also not impossible that the C. is a corruption of Nandā, the name of a prominent nun in P. sources that was a common name for women in general.</p>
-<p><em>Kṛśa Gautamī</em>. C. <span class="ch">吉離舍瞿曇彌</span> (EMC. kiĕt-lɪĕ-ʃɪă gɪu-dəm-miĕ), G. <em>*kiriṣa gotami</em>, P. <em>kisā gotamī</em>, S. <em>kṛśa gautamī</em>. The C. translit. matches the G. equiv. of this nun’s name, which means “the thin Gautamī,” though <em>kṛśa</em> is translated as “weak” (<span class="ch">少力</span>) in T1442. There is also an (apparent) error in T1442 that separated <em>Kṛśa</em> and <em>Gautamī</em> as two different names when they should be together as one.</p>
-<p><em>Utpalāvarṇā</em>. C. <span class="ch">優鉢羅色</span> (EMC. ɪəu-puat-la + “color”), G. <em>upalavaṃna</em>, P. <em>uppalavaṇṇā</em>, S. <em>utpalāvarṇā</em>. The C. translit. of S. <em>utpala</em> is well-known. This was the blue lotus flower, so the meaning of this famous nun’s name is “color of the blue lotus.” T1442 translates her name fully as “color of a lotus flower” (<span class="ch">蓮花色</span>).</p>
-<p><em>Mahāprajāpatī</em>. C. <span class="ch">摩訶波闍波提</span> (EMC. mua-ha-pua-ʒɪă-pua-dei), G. <em>mahapajapadi</em>, P. <em>mahāpajāpatī</em>, S. <em>mahāprajāpatī</em>. The C. translit. matches the G. pronunciation, though the difference is only in the final <em>-di</em> instead of <em>-tī</em>. T1442 translates this nun’s name as “Great Lord of the World” (<span class="ch">大世主</span>), interpreting Prajāpatī as the name of the Vedic creator god. She was the Buddha’s aunt and adoptive mother (being also married to his father) before becoming a nun. She was the leader of the early nun assembly after convincing the Buddha to allow women to ordain under his teaching. [<a href="#ref2">back</a>]</p></li>
-<li id="n3"><p><em>taught, instructed, edified, and gladdened … with a Dharma talk.</em> C. <span class="ch">說法，示、教、照、喜</span>, P. <em>dhammiyā kathāya sandassesi samādapesi samuttejesi sampahaṁsesi</em>. This expression with four verbs is found around a hundred times in other SĀ <em>sūtra</em>s. An alternate version that substitutes <span class="ch">利</span> (“to benefit”) for <span class="ch">照</span> (“to clearly understand”) occurs once in SĀ and many times in DĀ and the alternate Chinese SĀ (i.e., T100).</p>
-<p>An equiv. expression in MĀ is a little more elaborate and quite frequent: “taught the Dharma for them, encouraging, inspiring, and making them glad in measureless ways” (<span class="ch">為彼說法，勸發渴仰，成就歡喜，無量方便</span>). It appears to only have the last three verbs that is found in the P. version.</p>
-<p>Finally, EĀ also has a few instances of a simpler version: “gave a talk on the profound Dharma, encouraging, delighting, and making them glad.” (<span class="ch">與說深法，勸樂令喜</span>).</p>
+<p><em>Cundā</em>. C. 純陀 (EMC. tʃɪuĕn-da). This is a well-known translit. of P/S. <em>cunda</em>. Presumably, it was in a feminine form: Cundā. The parallel in T1442 is an alt. form of the same translit. (准陀, EMC. tʃɪuĕn-da).</p>
+<p><em>Meṇḍikā</em>. C. 民陀 (EMC. miĕn-da). Meṇḍaka was the name of a prominent lay disciple of the Buddha. My tentative guess is that this was a feminine form of the same in Prakrit. Again, T1442 has the same translit.</p>
+<p><em>Mārabhā</em>. C. 摩羅婆 (EMC. mua-la-bua). The 翻梵語 has an entry for 摩羅娑 immediately after the entry for 波羅遮羅 (the next name in this list), suggesting that 娑 was a typo for 婆, which was fairly common for these two characters. The interpretation there reinforces this conclusion: 譯曰莫懶 (T2130.54.1002a16), which presumably describes <em>mā</em> (“no”) + <em>rabha</em> (“negligence”). The corresponding translit. in T1442 (末臘婆) also adds support for taking 娑 in 翻梵語 as a typo. Thus, I arrive at Mārabhā as this nun’s name.</p>
+<p><em>Pālācārā</em>. C. 波羅遮羅 (EMC. pua-la-tʃɪă-la). The 翻梵語 says for this translit.: 譯曰波羅者守遮羅者行 (T2130.54.1002a15), which suggests <em>pāla</em> (守, “guard”) + <em>ācāra</em> (行, “conduct”). There was a nun in P. sources named Paṭācārā. The alternation between -ṭ- and -ḷ- in Indic dialects was not so uncommon, so I suspect this is the same nun. As an added bit of evidence, T1442 has a nun named “great robe” (大衣), which was an ironic name for the mendicant’s patchwork robes. A synonym for this could well be S. <em>paṭaccara</em> (“worn-out garment”), which is very similar in pronunciation to P. Paṭācārā. It would seem that this nun’s name has suffered some confusion as it traveled between Indic dialects. I have retained the Pr. version found in this text given the uncertainties.</p>
+<p><em>Āḷavikā</em>. C. 阿羅毘迦 (EMC. •a-la-bii-kă). This was also the translit. of the monk Āḷavakā’s name found in the <cite>Sudarśana Vinaya Vibhāṣā</cite> (善見律毘婆沙, cf. T1462.24.764b16). His name was sometimes written Āḷavikā in P. sources. Buddhaghoṣa and the 善見律毘婆沙 both agree that he was named for the village where he was born. Buddhaghoṣa also says that all children born there were so named. The 翻梵語 has entries for this translit. at T2130.54.998b16 and 1002a17. It says: 阿羅毘迦 譯曰小語. This suggests a word like S. <em>ālāpika</em>, which is also plausible. I’ve opted for the reading Āḷavikā here, especially since T1442 appears to include a translation of S. Aṭavī (曠野, “wilderness”), which is equiv. to Pr. Āḷavi, the name of the village.</p>
+<p><em>Kṣemā</em>. C. 差摩 (EMC. ṭṣ‘ïĕ-mua). This was a well-known translit. of S. <em>kṣema</em> (P. <em>khema</em>), and Khemā was the name of a prominent nun in P. sources. T1442 lists a nun named “Security” (安隱) which matches the meaning of S. <em>kṣema</em>.</p>
+<p><em>Namati</em>. C. 難摩 (EMC. nan-mua). This would translit. P/S. <em>nama-</em> or <em>nāma-</em>, and presumably a final syllable has been dropped. In G., there would have been no differentiation between these two possibilities because the language lacked long vowels. The final syllable, though, could have been <em>-da</em> or <em>-di</em>, which would transl. to S. <em>-ta</em> or <em>-ti</em>. My guess that the name was Namati is based on it being the name of a divinity. S. <em>namati</em> is a verb that means “bow” or “bend,” and S. <em>namada</em> is an adj. with meanings such as “crooked, master, felt, cloud.” It’s also not impossible that the C. is a corruption of Nandā, the name of a prominent nun in P. sources that was a common name for women in general.</p>
+<p><em>Kṛśa Gautamī</em>. C. 吉離舍瞿曇彌 (EMC. kiĕt-lɪĕ-ʃɪă gɪu-dəm-miĕ), G. <em>*kiriṣa gotami</em>, P. <em>kisā gotamī</em>, S. <em>kṛśa gautamī</em>. The C. translit. matches the G. equiv. of this nun’s name, which means “the thin Gautamī,” though <em>kṛśa</em> is translated as “weak” (少力) in T1442. There is also an (apparent) error in T1442 that separated <em>Kṛśa</em> and <em>Gautamī</em> as two different names when they should be together as one.</p>
+<p><em>Utpalāvarṇā</em>. C. 優鉢羅色 (EMC. ɪəu-puat-la + “color”), G. <em>upalavaṃna</em>, P. <em>uppalavaṇṇā</em>, S. <em>utpalāvarṇā</em>. The C. translit. of S. <em>utpala</em> is well-known. This was the blue lotus flower, so the meaning of this famous nun’s name is “color of the blue lotus.” T1442 translates her name fully as “color of a lotus flower” (蓮花色).</p>
+<p><em>Mahāprajāpatī</em>. C. 摩訶波闍波提 (EMC. mua-ha-pua-ʒɪă-pua-dei), G. <em>mahapajapadi</em>, P. <em>mahāpajāpatī</em>, S. <em>mahāprajāpatī</em>. The C. translit. matches the G. pronunciation, though the difference is only in the final <em>-di</em> instead of <em>-tī</em>. T1442 translates this nun’s name as “Great Lord of the World” (大世主), interpreting Prajāpatī as the name of the Vedic creator god. She was the Buddha’s aunt and adoptive mother (being also married to his father) before becoming a nun. She was the leader of the early nun assembly after convincing the Buddha to allow women to ordain under his teaching. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>taught, instructed, edified, and gladdened … with a Dharma talk.</em> C. 說法，示、教、照、喜, P. <em>dhammiyā kathāya sandassesi samādapesi samuttejesi sampahaṁsesi</em>. This expression with four verbs is found around a hundred times in other SĀ <em>sūtra</em>s. An alternate version that substitutes 利 (“to benefit”) for 照 (“to clearly understand”) occurs once in SĀ and many times in DĀ and the alternate Chinese SĀ (i.e., T100).</p>
+<p>An equiv. expression in MĀ is a little more elaborate and quite frequent: “taught the Dharma for them, encouraging, inspiring, and making them glad in measureless ways” (為彼說法，勸發渴仰，成就歡喜，無量方便). It appears to only have the last three verbs that is found in the P. version.</p>
+<p>Finally, EĀ also has a few instances of a simpler version: “gave a talk on the profound Dharma, encouraging, delighting, and making them glad.” (與說深法，勸樂令喜).</p>
 <p>Clearly, this way of describing the Buddha’s effect on his students when teaching Dharma must be quite old. Like many old expressions, it may have grew in elaborateness and proliferated in frequency with time but maintained its basic meaning. [<a href="#ref3">back</a>]</p></li>
 <li id="n4"><p>This background is missing from MN 146, which picks up with the next paragraph and depicts an awkward conversation between the Buddha and Ānanda about Nanda while the nuns were still present. This is a somewhat common situation when comparing Theravāda with other Āgama background stories. It makes one wonder if Theravāda redactors didn’t purposely condense these stories to make room for more verbose doctrinal passages, moving the narrative details into commentaries. Alternatively, one might also wonder whether the old <em>sūtra</em>s were originally sparse on details, which motivated redactors in each tradition to fill them out independently of each other. [<a href="#ref4">back</a>]</p></li>
 <li id="n5"><p>Where MN 146 is more concise in the initial background story, here it becomes much more verbose. Nanda walks the nuns through the entire argument for the selfless nature of the sense fields: That they are impermanent, painful, and subject to change, which makes it impossible for them to be self. What is curious, however, is that when the nuns confirm this conclusion for Nanda, they only state that the sense fields are impermanent. This pattern is repeated for each of the topics that Nanda raises below. Both this version and the one in T1442 omit the extended argument that impermanent things cannot be a self. On the other hand, we might say this section of MN 146 is simpler than this version because it doesn’t cover the sextet of awareness, contact, feeling, conception, intention, and craving. [<a href="#ref5">back</a>]</p></li>
 <li id="n6"><p><em>we have truly observed that there is no self in the six outer sense fields.</em> This is a more concise form of the previous conclusion given by the nuns. This abbreviation was likely the result of Chinese editing to remove what was considered excessive repetition.</p>
 <p>There are a few other irregularities that take place: Nanda’s restatement of the what the nuns say loses the verb “to observe,” and then gains the adverb “truly.” The nuns also begin saying they “always” come to this understanding rather than having already done so.</p>
 <p>These examples of instability in the C. translation probably don’t reflect the exact wording of the original. Usu. the initial trans. of standardized passages is the most complete and accurate one, and then repetitions become abbrev. or paraphrased in C. Āgama translations (the <cite>Madhyama Āgama</cite> being the conspicuous exception to this pattern). It’s unclear how much the translators, editors, and/or later copyists were responsible for this, but it appears to be a feature of translations from the era. [<a href="#ref6">back</a>]</p></li>
-<li id="n7"><p><em>Would that speaker be explaining it correctly?</em> C. <span class="ch">作是說者，為等說不？</span>, P. <em>sammā nu kho so, bhaginiyo, vadamāno vadeyyā”ti?</em>, T1442: <span class="ch">如是說時，可說此人為<strong>實語</strong>不？</span> The expression <span class="ch">等說</span> lit. means “equally” or “fully speaking,” which likely translated G. <em>sama vadadi</em>. However, the P. equiv. is <em>sammā … vadeyyā</em> (“correctly … speaking”), and T1442 reads <span class="ch">實語</span> (“truly speaking”). So, I assume that this is another case of confusion between G. <em>sama</em> (“equal”) and <em>saṃma</em> (“correct”). I’ve amended the passage to read <span class="ch">正說</span> instead of <span class="ch">等說</span> in my translation. [<a href="#ref7">back</a>]</p></li>
-<li id="n8"><p><em>Basket Serpents Sūtra.</em> Presumably this refers to SĀ 2.212 (1172). Briefly, the parable involves a chest of four dangerous vipers, five sword-wielding enemies, six bandits, an empty village, a village with bandits, a raging torrent, a river, being afraid on the near shore, and being refreshed and happy on the other shore.</p>
+<li id="n7"><p><em>Would that speaker be explaining it correctly?</em> C. 作是說者，為等說不？, P. <em>sammā nu kho so, bhaginiyo, vadamāno vadeyyā”ti?</em>, T1442: 如是說時，可說此人為<strong>實語</strong>不？ The expression 等說 lit. means “equally” or “fully speaking,” which likely translated G. <em>sama vadadi</em>. However, the P. equiv. is <em>sammā … vadeyyā</em> (“correctly … speaking”), and T1442 reads 實語 (“truly speaking”). So, I assume that this is another case of confusion between G. <em>sama</em> (“equal”) and <em>saṃma</em> (“correct”). I’ve amended the passage to read 正說 instead of 等說 in my translation. [<a href="#ref7">back</a>]</p></li>
+<li id="n8"><p><em>Serpent’s Basket Sūtra.</em> Presumably this refers to SĀ 2.212 (1172). Briefly, the parable involves a chest of four dangerous vipers, five sword-wielding enemies, six bandits, an empty village, a village with bandits, a raging torrent, a river, being afraid on the near shore, and being refreshed and happy on the other shore.</p>
 <p>The chest represents a person’s body of crude form, the four vipers represent the four basic elements, the five enemies represent the five acquired aggregates, and the six bandits represent the six delightful cravings. The empty village represents the six inner sense fields, and the bandits in the village represent the six outer sense fields. The raging torrent represents the four floods, and the river represents the three cravings for existence. The near shore represents being embodied, and the far shore represents <em>nirvāṇa</em>.</p>
 <p>It’s not clear what part of this parable we are to apply to the present passage. The next paragraph supplies its interpretation without the need for this other <em>sūtra</em>. [<a href="#ref8">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 4 February 2025</p>
+<p class='revised'>Last Revised: 23 May 2025</p>
 
 <hr/>
