Added SA 1.61, updated SA 2.97

--- a/01_agama/samyukta/02/SA2_97.md
+++ b/01_agama/samyukta/02/SA2_97.md
@@ -23,7 +23,7 @@ next: SA2_123-125.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.54a4'>「若有沙門、婆羅門作如是說： 『是非二者。 沙門瞿曇所說二法，此非為二。 彼自以意說二法者，但有言說。』 問已不知。 增其疑惑，以非其境界故。</td>
-    <td id='p3'>3. “Suppose an ascetic or brahmin were to say, ‘These are not two things. The ascetic Gautama claims they are two things, but these are not two. Those who use their own reasoning to say they are two things simply say this.’ When questioned, that ascetic or brahmin wouldn’t understand. Their confusion would increase because it’s not their area.</td>
+    <td id='p3'>3. “Suppose an ascetic or brahmin were to say, ‘These are not two things. The ascetic Gautama claims they are two things, but these are not two. Those who use their own reasoning to say they are two things simply say this.’ When questioned, that ascetic or brahmin wouldn’t understand. Their uncertainty would increase because it’s not their area.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.54a8'>「所以者何？ 緣眼、色，眼識生。 三事和合，緣觸。 觸生受，若苦、若樂、不苦不樂。 若於此受集、受滅、受味、受患、受離不如實知者，種貪欲身觸、種瞋恚身觸、種戒取身觸、種我見身觸，亦種殖增長諸惡不善法。 如是純大苦聚皆從集生。 如是耳⋯鼻⋯舌⋯身⋯意、法緣，生意識。 三事和合觸⋯廣說如上。</td>
