--- a/01_agama/samyukta/01/SA1_61.md
+++ b/01_agama/samyukta/01/SA1_61.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 1. The Aggregates | 61 (64). Udāna'
 type: kramdown
 base: ../../../
 previous: SA1_60.html
-next: SA1_138.html
+next: SA1_62-73.html
 ---
 
 <h1><a href='../index.html'>The Related Discourses</a></h1>
