--- a/01_agama/samyukta/01/SA1_138.md
+++ b/01_agama/samyukta/01/SA1_138.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Related Discourses | 1. The Aggregates | 138 (81). Pūraṇa'
 type: kramdown
 base: ../../../
-previous: SA1_61.html
+previous: SA1_62-73.html
 next: SA1_143.html
 ---
 
